[package]
name = "qproxy"
version = "0.1.5"
edition = "2021"
authors = ["QuanNguyen<quanna.dev@gmail.com>"]
repository = "https://github.com/quannadev/qproxy"
description = "A simple forward proxy server written in Rust"
readme = "README.md"
homepage = "https://github.com/quannadev/qproxy"
license = "MIT"

[lib]
name = "qproxy"
path = "src/lib.rs"

[[bin]]
name = "qproxy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }