[package]
name = "qproxy"
version = "0.2.4"
edition = "2021"
authors = ["QuanNguyen<quanna.dev@gmail.com>"]
repository = "https://github.com/quannadev/qproxy"
description = "A simple forward proxy server written in Rust"
readme = "README.md"
homepage = "https://github.com/quannadev/qproxy"
license = "MIT"

[lib]
name = "qproxy"
path = "src/lib.rs"

[[bin]]
name = "qproxy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rayon = "1.10.0"
reqwest = { version = "0.12.3", features = ["json"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
